--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": ">=7.2",
         "illuminate/support": "^8.0",
         "illuminate/database": "^8.0"
     },
