--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     ],
     "require": {
         "php": ">=7.2",
-        "illuminate/support": "^8.0",
-        "illuminate/database": "^8.0"
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
     },
     "autoload": {
         "psr-4": {
